2006-10-31  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_WriteGedcom.py (write_families): Properly write
	custom attr type.

2006-10-30  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_PersonView.py: prevent updates on person list if not 
	visible (person-added)
	* src/gramps_main.py: remove 2.1 unstable warning
	* src/Makefile.am: install Lru.py

2006-10-29  Don Allingham  <don@gramps-project.org>
	* src/GrampsCfg.py: make look more like gedit
	* src/Lru.py: Added least-recently-used module from
	the PyPE program 
	* src/DisplayModels/_PeopleModel.py: use LRU module to speed up
	name displays
	* configure.in: post 2.2.1 release update
	* src/GrampsDb/_ReadXML.py: handle broken events
	* help/C/gramps.xml: fix <warning>

2006-10-29  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/rel_da.py: Add more locales.

2006-10-28  Don Allingham  <don@gramps-project.org>
	* help/C/gramps.xml: preferences changes
	* help/gramps.pot: updated 

2006-10-28  Alex Roitman  <shura@gramps-project.org>
	* src/Makefile.am (docmodules): Update.
	* src/Filters/Rules/Family/_MemberBase.py: Formatting fixes.
	* src/ReportBase/_ReportUtils.py: Formatting fixes.
	* src/GrampsDb/_ReadGedcom.py: Formatting fixes.
	* src/GrampsDb/_GrampsDbBase.py: Formatting fixes.
	* src/GrampsDb/_GrampsDbFactories.py: Formatting fixes.
	* src/GrampsDb/_WriteXML.py: Formatting fixes.
	* src/GrampsDb/_GrampsBSDDB.py: Formatting fixes.
	* src/RelLib/_UrlBase.py: Formatting fixes.
	* src/RelLib/_Url.py: Formatting fixes.
	* src/RelLib/_Person.py: Formatting fixes.
	* src/RelLib/_Family.py: Formatting fixes.
	* src/RelLib/_Place.py: Formatting fixes.
	* src/RelLib/_Repository.py: Formatting fixes.
	* src/BasicUtils.py: Formatting fixes.
	* src/DateHandler/_DateUtils.py: Formatting fixes.
	* NEWS: Update.
	* src/ViewManager.py (ViewManager.about): Use const.py.
	* src/const.py.in (url_manual): Add the link constant.
	* src/GrampsDisplay.py (help): Update the link.